src/objects/OwnFiledsComparator__c.object
<CustomObject>
    <fields>
        <fullName>first__c</fullName>
        <label>first</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>second__c</fullName>
        <label>second</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OwnFiledsComparator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Comparator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OwnFiledsComparators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>